syntax = "proto3";

option go_pkg = "github.com/ozouai/loftymusic/audiosource/audiosourcepb;audiosourcepb";

service AudioSource {
    rpc Register(RegisterRequest) (RegisterResponse);
}

service AudioSourceService {
    rpc Search(SearchRequest) (SearchResponse);
    rpc Stream(StreamRequest) (stream StreamPacket);
}

message RegisterRequest {
    string source_name = 1;
}

message RegisterResponse {

}

message SearchRequest {
    string term = 1;
}

message SearchResponse {
    string id = 1;
}

message StreamRequest {
    string id = 1;
}

message StreamPacket {
    bytes frame = 1;
}
